--- a/tasks/packages/python.yml
+++ b/tasks/packages/python.yml
@@ -1,9 +1,16 @@
 ---
+
+- name: Get a list of installed pip3 packges
+  raw: pip3 list | tail -n +3 | cut -d" " -f1
+  register: pip_installed
+  become: no
+
+
 - name: Install python packages
   pip:
     name: "{{ item }}"
     state: latest
     executable: pip3
   with_items: "{{ packages_python }}"
-  when: packages_python | length > 0
+  when: packages_python | length > 0 and item not in pip_installed.stdout_lines
   become: yes
