--- a/vars/config.yml
+++ b/vars/config.yml
@@ -96,7 +96,8 @@ services:
   launchctl: []
 
 packages_brew_taps:
-  - koekeishiya/formulae
+  # - koekeishiya/formulae
+  - sergeycherepanov/docker-virtualbox
   - homebrew/cask-fonts
   - homebrew/services
 
@@ -159,9 +160,8 @@ packages_brew:
   - cmake
   - gdb
   - neovim
-  # yabai
-  - skhd
-  - yabai
+  # - skhd
+  # - yabai
 
 packages_brew_cask:
   # misc
@@ -174,6 +174,7 @@ packages_brew_cask:
   - the-unarchiver
   - nextcloud
   # creative
+  - adobe-creative-cloud
   - bitwig-studio
   - blender
   - darktable
@@ -188,12 +189,14 @@ packages_brew_cask:
   - iterm2
   - mark-text
   - vscodium
+  - virtualbox
+  - docker-virtualbox
   # web
-  - brave-browser-beta
+  - brave-browser
   - chromium
   - firefox
   # social
-  - discord
+  - element
   # networking
   - charles
   - little-snitch
